--- a/Develop/package.json
+++ b/Develop/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "inquirer": "^6.3.1",
+    "markdown-utils": "^1.0.0"
   }
 }
